bin_PROGRAMS = separateintoport_files prepareforgetconndata_partial getconndata getconninfo vals_prctile estimatecapacity3 plrhelper1 filtermaxnumpairs convert_date_precision genjobs generic moving_app_bw getrttbwplr_nums printedges printvertices allpairs_smarter repeattimecommonfile gettimeofday 0_1_separate getduration listener generator_daemon startlistener

convert_date_precision_SOURCES = convert_date_precision.c 
separateintoport_files_SOURCES = separateintoport_files.c
prepareforgetconndata_partial_SOURCES = prepareforgetconndata_partial.c
getconndata_SOURCES = getconndata.c getconndata.h
getconninfo_SOURCES = getconninfo.c getconninfo.h
vals_prctile_SOURCES = vals_prctile.c
estimatecapacity3_SOURCES = estimatecapacity3.c
plrhelper1_SOURCES = plrhelper1.c
filtermaxnumpairs_SOURCES = filtermaxnumpairs.c
genjobs_SOURCES = genjobs.cc
generic_SOURCES = generic_class.cc
moving_app_bw_SOURCES = moving_app_bw.c
getrttbwplr_nums_SOURCES = getrttbwplr_nums.c
printedges_SOURCES = printedges.c
printvertices_SOURCES = printvertices.c
allpairs_smarter_SOURCES = allpairs_smarter.c
repeattimecommonfile_SOURCES = hashtable_cwc22.c hashtable_cwc22.h hashtable_itr_cwc22.c hashtable_itr_cwc22.h hashtable_private_cwc22.h repeattimecommonfile.c workgen_header.h genfromfile.c genfromfile.h 
gettimeofday_SOURCES = gettimeofday.c
0_1_separate_SOURCES = 0_1_separate.c
getduration_SOURCES = getduration.c
listener_SOURCES = listener.c genfromfile.c hashtable_cwc22.c hashtable_itr_cwc22.c workgen_header.h genfromfile.h hashtable_itr_cwc22.h hashtable_cwc22.h hashtable_private_cwc22.h 
generator_daemon_SOURCES = generator_daemon.c hashtable_itr_cwc22.c hashtable_cwc22.c workgen_header.h hashtable_itr_cwc22.h hashtable_cwc22.h hashtable_private_cwc22.h
startlistener_SOURCES = startlistener.c hashtable_cwc22.c hashtable_itr_cwc22.c hashtable_cwc22.h hashtable_itr_cwc22.h hashtable_private_cwc22.h

listener_LDADD = -lm  
generator_daemon_LDADD = -lm
